[tool.poetry]
name = "kitti_object_vis"
version = "0.1.0"
description = "MIT"
authors = ["kencyke <casek2703@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^6.2.1"
jupyter = "^1.0.0"
opencv-python = "^4.1.2"
psutil = "^5.6.7"
scipy = "^1.3.3"
numpy = "^1.17.4"
mayavi = "^4.7.1"
vtk = "^8.1.2"
PyQt5 = "^5.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
